<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Activities.Sign.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/username"
        android:id="@+id/usernametxt"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernametxt"
            android:textAlignment="center"
            android:layout_marginRight="42dp"
            android:layout_marginLeft="42dp"
            android:layout_weight="1"
            android:textSize="32dp"
            android:id="@+id/username"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/password"
            android:id="@+id/passwordtxt"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginRight="42dp"
            android:layout_marginLeft="42dp"
            android:layout_below="@id/passwordtxt"
            android:id="@+id/password"
            android:textSize="32dp"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentRight="true"
            android:textSize="24dp"
            android:textColor="@color/hyper_text"
            android:text="@string/signup"
            android:id="@+id/no_accountbtn"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_above="@id/loginbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:id="@+id/warning"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textSize="36dp"
            android:text="@string/login"
            android:id="@+id/loginbtn"/>
    </RelativeLayout>

</LinearLayout>